--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,4 +11,5 @@
   <% end %>
 </div>
 
-<%= link_to "New user", new_user_path %>
+<%# <%= link_to "New user", new_user_path %>
+<%= link_to "Sign out", signout_path %>
