Deleted Zone Identifier files, Changes in form

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -18,7 +18,7 @@
           <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
 
           <%= f.label :Username %><br />
-          <%= f.email_field :login, autofocus: true, autocomplete: "email", class: "form-control" %>
+          <%= f.text_field :username, autofocus: true, class: "form-control" %>
 
           <%= f.label :password %><br />
           <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
