--- a/app/assets/stylesheets/login_styles.scss
+++ b/app/assets/stylesheets/login_styles.scss
@@ -1,9 +1,11 @@
+@import url('https://fonts.cdnfonts.com/css/satoshi');
+
 //
 $darkbg-color: #17181C;
 $button-color: #6366F1;
 
 * {
- font-family: Arial, Helvetica, sans-serif;
+ font-family: satoshi;
  padding: 0;
  margin: 0;
 }
