create API for blogs and comments

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Blogs</h1>
+<h1> default Blogs</h1>
 
 <div id="blogs">
   <% @blogs.each do |blog| %>
@@ -12,3 +12,6 @@
 </div>
 
 <%= link_to "New blog", new_blog_path %>
+
+component blogs
+<blogs-dashboard></blogs-dashboard>
