--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -39,7 +39,7 @@
   </div>
 </nav>
 
-<div class="container">
+<div class="body">
   <div class="row mt-3">
     <div class="col">
       <p class="h4">Trending today</p>
