--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -26,17 +26,20 @@
       <input type="text" class="form-control blogs-search" placeholder="Search Post">
     </div>
     
-    <div class="login-link">
-      <%= link_to "Login", new_user_registration_path(@users) %>
-    </div>
-
     <div class="blogs-navbutton">
-      <button class="blogs-loginbutton" type="submit">Sign Up</button>
+      <% if user_signed_in? %>
+        <%= current_user.username %>
+        <%= link_to "Sign out", signout_path %>
+      <% else %>
+
+      <%= link_to "Login", user_session_path(@users), class: "login-link" %>
+      <%= button_to "Sign up", new_user_registration_path(@users), :method => :get, class: "blogs-loginbutton" %>
+      <% end %>
     </div>
   </div>
 </nav>
 
-<div class="container">
+<div class="body">
   <div class="row mt-3">
     <div class="col">
       <p class="h4">Trending today</p>
@@ -48,7 +51,7 @@
     <div class="col-sm-3">ez</div>
     <div class="col-sm-3">ez</div>
     <div class="col-sm-3">ez</div>
-  </div>
+  </div><hr>
 
   <div class="row mt-3">
     <div class="col">
