--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,17 +1,58 @@
-<%= form_with(model: blog) do |form| %>
-  <% if blog.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
+<%= stylesheet_link_tag('styles') %>
 
-      <ul>
-        <% blog.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+<nav class="navbar navbar-expand-lg bg-light">
+  <div class="navbar-main">
+    <div class="blogslogo-style">
+      <%= image_tag "MG_BLOGS_LOGO.svg", :class => ""  %>
     </div>
-  <% end %>
+    
+    <div class="form-group has-search">
+      <span class="fa fa-search form-control-feedback"></span>
+      <input type="text" class="form-control blogs-search" placeholder="Search Post">
+    </div>
+    
+    <div class="blogs-navbutton">
+    <% if user_signed_in? %>
+      <div class="dropdown">
+        <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <%= current_user.username %>
+        </a>
 
-  <div>
-    <%= form.submit %>
+        <ul class="dropdown-menu">
+          <li><%= link_to "My Profile", users_path(@users), class:"dropdown-item" %></li>
+          <li><%= link_to "Sign out", signout_path, class:"dropdown-item" %></li>
+          <% else %>
+          <%= link_to "Login", user_session_path(@users), class: "login-link" %>
+          <%= button_to "Sign up", new_user_registration_path(@users), :method => :get, class: "blogs-loginbutton" %>
+        <% end %>
+        </ul>
+      </div> 
+    </div>
   </div>
-<% end %>
+</nav>
+
+<div class="row">
+  <div class="col-sm-6">
+    <%= form_with(model: blog) do |form| %>
+      <% if blog.errors.any? %>
+        <div style="color: red">
+          <h2><%= pluralize(blog.errors.count, "error") %> prohibited this blog from being saved:</h2>
+          <ul>
+            <% blog.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <div>
+        <%= form.submit %>
+      </div>
+    <% end %>
+  </div>
+</div>
+
+
+
+  
+
