--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,7 +1,5 @@
 <!-- <p style="color: green"><%= notice %></p>
-
 <h1>Blogs</h1>
-
 <div id="blogs">
   <% @blogs.each do |blog| %>
     <%= render blog %>
@@ -10,9 +8,9 @@
     </p>
   <% end %>
 </div>
-
 <%= link_to "New blog", new_blog_path %>
 -->
+
 <%= stylesheet_link_tag('styles') %>
 
 <nav class="navbar navbar-expand-lg bg-light">
@@ -27,19 +25,26 @@
     </div>
     
     <div class="blogs-navbutton">
-      <% if user_signed_in? %>
-        <%= current_user.username %>
-        <%= link_to "Sign out", signout_path %>
-      <% else %>
+    <% if user_signed_in? %>
+      <div class="dropdown">
+        <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <%= current_user.username %>
+        </a>
 
-      <%= link_to "Login", user_session_path(@users), class: "login-link" %>
-      <%= button_to "Sign up", new_user_registration_path(@users), :method => :get, class: "blogs-loginbutton" %>
-      <% end %>
+        <ul class="dropdown-menu">
+          <li><%= link_to "My Profile", users_path(@users), class:"dropdown-item" %></li>
+          <li><%= link_to "Sign out", signout_path, class:"dropdown-item" %></li>
+          <% else %>
+          <%= link_to "Login", user_session_path(@users), class: "login-link" %>
+          <%= button_to "Sign up", new_user_registration_path(@users), :method => :get, class: "blogs-loginbutton" %>
+        <% end %>
+        </ul>
+      </div> 
     </div>
   </div>
 </nav>
 
-<div class="body">
+<div class="container">
   <div class="row mt-3">
     <div class="col">
       <p class="h4">Trending today</p>
@@ -47,36 +52,41 @@
   </div>
 
   <div class="row">
-    <div class="col-sm-3">ez</div>
-    <div class="col-sm-3">ez</div>
-    <div class="col-sm-3">ez</div>
-    <div class="col-sm-3">ez</div>
+    <div class="col-sm-3"><%= image_tag "Image1.png", :class => "trending-image" %><p class="textover-image">Become a unicorn</p></div>
+    <div class="col-sm-3"><%= image_tag "Image2.png", :class => "trending-image" %><p class="textover-image">Userflow Brainstorming</p></div>
+    <div class="col-sm-3"><%= image_tag "Image3.png", :class => "trending-image" %><p class="textover-image">Client Meeting</p></div>
+    <div class="col-sm-3"><%= image_tag "Image4.png", :class => "trending-image" %><p class="textover-image">Play with your friends</p></div>
   </div><hr>
 
-  <div class="row mt-3">
+  <div class="row mt-5">
     <div class="col">
       <p class="h4">Recent posts</p>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-8">LEFT</div>
+    <div class="col-8">
+      <%# <div class="card"> %>
+        <blogs-dashboard></blogs-dashboard>
+      <%# </div> %>
+    </div>
+    
     <div class="col-4">
+      <%= button_to "Create Post", new_blog_path(@blogs), :method => :get, class: "createpost-button" %><hr>
       <p class="h5">Popular Tags</p>
 
-      <div class="card">
+      <div class="popular-card">
         <ul class="list-group">
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Morbi leo risus</li>
-          <li class="list-group-item">Porta ac consectetur ac</li>
+          <li class="list-group-item border-bottom-0">Cras justo odio</li>
+          <li class="list-group-item border-bottom-0">Dapibus ac facilisis in</li>
+          <li class="list-group-item border-bottom-0">Morbi leo risus</li>
+          <li class="list-group-item border-bottom-0">Porta ac consectetur ac</li>
           <li class="list-group-item">Vestibulum at eros</li>
         </ul>
       </div>
     </div>
   </div>
-
 </div>
 
 
-<blogs-dashboard></blogs-dashboard>
+
