Changes in UI and added Icons

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -13,14 +13,14 @@
 
 <%= stylesheet_link_tag('styles') %>
 
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg ">
   <div class="navbar-main">
     <div class="blogslogo-style">
       <%= image_tag "MG_BLOGS_LOGO.svg", :class => ""  %>
     </div>
     
     <div class="form-group has-search">
-      <span class="fa fa-search form-control-feedback"></span>
+      <span class="fas fa-search form-control-feedback"></span>
       <input type="text" class="form-control blogs-search" placeholder="Search Post">
     </div>
     
