--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -165,22 +165,21 @@ html {
 .popular-card {
   width: 240px;
   height: 190px;
-  
 }
 
-.trending-image{
+.trending-image {
   width: 251px;
   height: 170px;
   z-index: 0;
   border-radius: 2%;
-  image-rendering:-moz-crisp-edges;          /* Firefox        */
-  image-rendering:-o-crisp-edges;            /* Opera          */
-  image-rendering:-webkit-optimize-contrast; /* Safari         */
-  image-rendering:optimize-contrast;         /* CSS3 Proposed  */
-  -ms-interpolation-mode:nearest-neighbor;   /* IE8+           */
+  image-rendering: -moz-crisp-edges; /* Firefox        */
+  image-rendering: -o-crisp-edges; /* Opera          */
+  image-rendering: -webkit-optimize-contrast; /* Safari         */
+  image-rendering: optimize-contrast; /* CSS3 Proposed  */
+  -ms-interpolation-mode: nearest-neighbor; /* IE8+           */
   &:hover {
     -webkit-transform: scale(1.3);
-	  transform: scale(1.3);
+    transform: scale(1.3);
   }
 }
 
@@ -190,4 +189,16 @@ html {
   margin-top: -12%;
   margin-left: 5%;
   font-size: 16px;
+}
+
+.has-search .form-control-feedback {
+  position: absolute;
+  height: 40%;
+  bottom: 12px;
+  margin-left: 10px;
+  color: rgba(17, 18, 21, 0.32);
+}
+
+.has-search .form-control {
+  padding-left: 8%;
 }
