--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,81 +1,72 @@
-<!-- <p style="color: green"><%= notice %></p>
-<h1>Blogs</h1>
-<div id="blogs">
-  <% @blogs.each do |blog| %>
-    <%= render blog %>
-    <p>
-      <%= link_to "Show this blog", blog %>
-    </p>
-  <% end %>
-</div>
-<%= link_to "New blog", new_blog_path %>
--->
-
 <%= stylesheet_link_tag('styles') %>
 
-<nav class="navbar navbar-expand-lg ">
+<nav class="navbar navbar-expand-lg bg-light">
   <div class="navbar-main">
-    <div class="blogslogo-style">
+    <%= link_to root_path, class:"blogslogo-style" do %>
       <%= image_tag "MG_BLOGS_LOGO.svg", :class => ""  %>
-    </div>
+    <% end %>
     
     <div class="form-group has-search">
-      <span class="fas fa-search form-control-feedback"></span>
+      <span class="fa fa-search form-control-feedback"></span>
       <input type="text" class="form-control blogs-search" placeholder="Search Post">
     </div>
     
-    <div class="blogs-navbutton">
-    <% if user_signed_in? %>
-      <div class="dropdown">
-        <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          <%= current_user.username %>
-        </a>
+    <div class="d-flex">
+      <div>
+      <% if user_signed_in? %>
+        <%= button_to "+", new_blog_path(@blogs), :method => :get, class: "navbar-button" %>
+        </div>
 
-        <ul class="dropdown-menu">
-          <li><%= link_to "My Profile", users_path(@users), class:"dropdown-item" %></li>
-          <li><%= link_to "Sign out", signout_path, class:"dropdown-item" %></li>
-          <% else %>
-          <%= link_to "Login", user_session_path(@users), class: "login-link" %>
-          <%= button_to "Sign up", new_user_registration_path(@users), :method => :get, class: "blogs-loginbutton" %>
-        <% end %>
-        </ul>
-      </div> 
+        <div class="vl"></div>
+      <% end %>
+
+      <div class="d-flex">
+      <% if user_signed_in? %>
+        <div class="dropdown">
+          <%= image_tag "sasuke.jpg", :class => "user-icon" %>
+          <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <%= current_user.username %>
+          </a>
+    
+          <ul class="dropdown-menu">
+            <li><%= link_to "My Profile", users_path(@users), class:"dropdown-item" %></li>
+            <li><%= link_to "Sign out", signout_path, class:"dropdown-item" %></li>
+
+            <% else %>
+            <%= link_to "Login", user_session_path(@users), class: "login-link" %>
+            <%= button_to "Sign up", new_user_registration_path(@users), :method => :get, class: "blogs-loginbutton" %>
+            <% end %>
+          </ul>
+        </div> 
+      </div>
     </div>
   </div>
 </nav>
 
-<div class="container">
-  <div class="row mt-3">
-    <div class="col">
-      <p class="h4">Trending today</p>
-    </div>
-  </div>
+<div class="container mt-5" style="max-width:840px; padding: 0">
+  <p class="h4">Trending today</p>
 
-  <div class="row">
-    <div class="col-sm-3"><%= image_tag "Image1.png", :class => "trending-image" %><p class="textover-image">Become a unicorn</p></div>
-    <div class="col-sm-3"><%= image_tag "Image2.png", :class => "trending-image" %><p class="textover-image">Userflow Brainstorming</p></div>
-    <div class="col-sm-3"><%= image_tag "Image3.png", :class => "trending-image" %><p class="textover-image">Client Meeting</p></div>
-    <div class="col-sm-3"><%= image_tag "Image4.png", :class => "trending-image" %><p class="textover-image">Play with your friends</p></div>
+  <div class="d-flex gap-3 justify-content-center">
+    <div class="image-container"><%= image_tag "Image1.png", :class => "image" %><p class="textover-image">Become a unicorn</p></div>
+    <div class="image-container"><%= image_tag "Image2.png", :class => "image" %><p class="textover-image">Userflow Brainstorming</p></div>
+    <div class="image-container"><%= image_tag "Image3.png", :class => "image" %><p class="textover-image">Client Meeting</p></div>
+    <div class="image-container"><%= image_tag "Image4.png", :class => "image" %><p class="textover-image">Play with your friends</p></div>
   </div><hr>
 
-  <div class="row mt-5">
-    <div class="col">
-      <p class="h4">Recent posts</p>
-    </div>
-  </div>
+  <p class="h4">Recent posts</p>
 
   <div class="row">
     <div class="col-8">
-      <%# <div class="card"> %>
-        <blogs-dashboard></blogs-dashboard>
-      <%# </div> %>
+      <blogs-dashboard></blogs-dashboard>
     </div>
     
     <div class="col-4">
-      <%= button_to "Create Post", new_blog_path(@blogs), :method => :get, class: "createpost-button" %><hr>
+      <% if user_signed_in? %>
+        <%= button_to "Create Post", new_blog_path(@blogs), :method => :get, class: "createpost-button" %><hr>
+      <% end %>
+      
       <p class="h5">Popular Tags</p>
-
-      <div class="popular-card">
+      <div class="card">
         <ul class="list-group">
           <li class="list-group-item border-bottom-0">Cras justo odio</li>
           <li class="list-group-item border-bottom-0">Dapibus ac facilisis in</li>
