--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -68,13 +68,44 @@
       <p class="h5">Popular Tags</p>
       <div class="card">
         <ul class="list-group">
-          <li class="list-group-item border-bottom-0">Cras justo odio</li>
-          <li class="list-group-item border-bottom-0">Dapibus ac facilisis in</li>
-          <li class="list-group-item border-bottom-0">Morbi leo risus</li>
-          <li class="list-group-item border-bottom-0">Porta ac consectetur ac</li>
-          <li class="list-group-item">Vestibulum at eros</li>
+          <li class="list-group-item border-bottom-0">@design-talks</li>
+          <li class="list-group-item border-bottom-0">@react</li>
+          <li class="list-group-item border-bottom-0">@ruby</li>
+          <li class="list-group-item border-bottom-0">@case-studies</li>
+          <li class="list-group-item border-bottom-0">@tech-stack</li>
+          <li class="list-group-item">@bootcamp</li>
         </ul>
       </div>
+
+      <div class="card-links">
+        <div class="right-link">
+          <p>User Agreement</p>
+          <p>Content Policy</p>
+        </div>
+        
+        <div class="left-link">
+          <p>Privacy Policy</p>
+          <p>Moderator Code of Conduct</p>
+        </div>
+      </div><hr>
+
+      <div class="card-links">
+        <div class="right-link">
+          <p>English</p>
+          <p>Français</p>
+          <p>Italiano</p>
+        </div>
+
+        <div class="left-link">
+          <p>Deustch</p>
+          <p>Español</p>
+          <p>Português</p>
+        </div>
+        
+      </div><hr>
+
+      <p>Mashup Garage Blogs © 2023</p>
+      <p>All rights reserved.</p>
     </div>
   </div>
 </div>
