--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-6 container">
+  <div class="container mt-5" style="max-width:840px; padding: 0">
     <%= form_with(model: blog) do |form| %>
       <!-- <% if blog.errors.any? %>
         <div style="color: red">
@@ -14,19 +14,22 @@
       -->
       <div class="card-header">
         <h4>Create Post</h4>
-        <%= link_to "Draft", '' , class: "post-link" %>
-        <button class="btn btn-primary post-button">12</button>
+        <div>
+          <%= link_to "Draft", '' , class: "post-link" %>
+          <button class="btn btn-primary post-button">12</button>
+        </div>
+        
       </div>
       
       <div class="card-body card">
         <div class="form-group">
           <%= label_tag :title %>
-          <%= form.text_field :name, class: "form-control input-post" %>
+          <%= form.text_field :name, class: "form-control input-title" %>
         </div>
 
         <div class="form-group">
           <%= label_tag :body %>
-          <%= form.text_field :body, class: "form-control input-post" %>
+          <%= form.text_field :body, class: "form-control input-body" %>
         </div>
 
         <p>Tags</p>
