--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.cdnfonts.com/css/satoshi');
+@import url("https://fonts.cdnfonts.com/css/satoshi");
 
 //
 $darkbg-color: #17181c;
@@ -185,6 +185,8 @@ $blogsbg-color: #ebf0f4;
   background-color: #ecf1f3;
   width: 100%;
   height: 320px;
+  padding-top: 0;
+  padding-left: 0;
 }
 
 .card-header {
