--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -24,12 +24,12 @@
       <div class="card-body card">
         <div class="form-group">
           <%= label_tag :title %>
-          <%= form.text_field :name, class: "form-control input-title" %>
+          <%= form.text_field :title, class: "form-control input-title" %>
         </div>
 
         <div class="form-group">
           <%= label_tag :body %>
-          <%= form.text_field :body, class: "form-control input-body" %>
+          <%= form.text_field :content, class: "form-control input-body" %>
         </div>
 
         <p>Tags</p>
