Changes in blogs UI spacing

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -79,27 +79,27 @@
 
       <div class="card-links">
         <div class="right-link">
-          <p>User Agreement</p>
+          <p class="p-spacing">User Agreement</p>
           <p>Content Policy</p>
         </div>
         
         <div class="left-link">
-          <p>Privacy Policy</p>
+          <p class="p-spacing">Privacy Policy</p>
           <p>Moderator Code of Conduct</p>
         </div>
       </div><hr>
 
       <div class="card-links">
         <div class="right-link">
-          <p>English</p>
-          <p>Français</p>
-          <p>Italiano</p>
+          <p class="p-spacing">English</p>
+          <p class="p-spacing">Français</p>
+          <p class="p-spacing">Italiano</p>
         </div>
 
         <div class="left-link">
-          <p>Deustch</p>
-          <p>Español</p>
-          <p>Português</p>
+          <p class="p-spacing">Deustch</p>
+          <p class="p-spacing">Español</p>
+          <p class="p-spacing">Português</p>
         </div>
         
       </div><hr>
