--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.cdnfonts.com/css/satoshi");
+@import url('https://fonts.cdnfonts.com/css/satoshi');
 
 //
 $darkbg-color: #17181c;
@@ -243,12 +243,18 @@ $blogsbg-color: #ebf0f4;
   color: grey;
   font-size: 12.8px;
   display: flex;
+  margin-top: 16px;
 }
 
 .left-link {
-  flex: 1;
+  flex: 2;
 }
 
 .right-link {
   flex: 2;
+}
+
+.p-spacing {
+  margin: 0;
+  margin-bottom: 8px;
 }
