--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -12,7 +12,7 @@
         </div>
       <% end %>
       -->
-      <div class="card-header">
+      <div class="">
         <h4>Create Post</h4>
         <div>
           <%= link_to "Draft", '' , class: "post-link" %>
@@ -24,12 +24,12 @@
       <div class="card-body card">
         <div class="form-group">
           <%= label_tag :title %>
-          <%= form.text_field :title, class: "form-control input-title" %>
+          <%= form.text_field :title, class: "form-control" %>
         </div>
 
         <div class="form-group">
           <%= label_tag :body %>
-          <%= form.text_field :content, class: "form-control input-body" %>
+          <%= form.text_field :content, class: "form-control" %>
         </div>
 
         <p>Tags</p>
