--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -32,7 +32,7 @@
             </a>
       
             <ul class="dropdown-menu">
-              <li><%= link_to "My Profile", users_path(@users), class:"dropdown-item" %></li>
+              <li><%= link_to "My Profile", users_path(@user), class:"dropdown-item" %></li>
               <li><%= link_to "Sign out", signout_path, class:"dropdown-item" %></li>
 
               <% else %>
@@ -48,10 +48,10 @@
 
   <div class="container mt-5" style="max-width:840px; padding: 0">
     <p class="h4">Your posts</p>
-
+      <%# <user-profile></user-profile> %>
     <div class="row">
       <div class="col-8">
-        <blogs-dashboard></blogs-dashboard>
+        
       </div>
       
       <div class="col-4">
