Changes post time, fixed create post to be user_signed in

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -7,8 +7,11 @@
     <% end %>
     
     <div class="form-group has-search">
-      <span class="fa fa-search form-control-feedback"></span>
-      <input type="text" class="form-control blogs-search" placeholder="Search Post">
+      <form>
+        <span class="fa fa-search form-control-feedback"></span>
+        <input type="text" class="form-control blogs-search" placeholder="Search Post">
+        <button type="submit" hidden></button>
+      </form>
     </div>
     
     <div class="d-flex">
