--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,5 +1,6 @@
 <%= stylesheet_link_tag('styles') %>
 
+<% if user_signed_in? %>
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="navbar-main">
     <%= link_to root_path, class:"blogslogo-style" do %>
@@ -47,3 +48,9 @@
   <post-form></post-form>
 </div>
 
+<% else %>
+  <div class="container mt-5">
+    <h1>You can only create post if you are logged in.</h1>
+    <%= button_to "Go to login page", user_session_path(@users), class:"btn btn-primary" %>
+  </div>
+<% end %>
