--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,6 @@
 <%= stylesheet_link_tag('styles') %>
 
-<% @users.each do |user| %>
-  <%= render user %>
-
+<% if @user == @current_user %>
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="navbar-main">
       <%= link_to root_path, class:"blogslogo-style" do %>
@@ -48,10 +46,9 @@
 
   <div class="container mt-5" style="max-width:840px; padding: 0">
     <p class="h4">Your posts</p>
-      <%# <user-profile></user-profile> %>
     <div class="row">
       <div class="col-8">
-        
+        <user-profile></user-profile>
       </div>
       
       <div class="col-4">
