--- a/app/assets/builds/application.css
+++ b/app/assets/builds/application.css
@@ -6,10 +6,8 @@
   height: 20px;
   width: 20px;
 }
-.down {
-  margin-top: 50px;
-  flex-direction: column;
-  justify-content: space-evenly;
+.voteButtons:hover {
+  color: red;
 }
 .post-card {
   display: flex;
@@ -50,17 +48,6 @@
 .left-right {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 0.5rem;
-}
-.chat-style {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.5rem;
-}
-.avatar-style {
-  display: flex;
   align-items: center;
   gap: 0.5rem;
 }
