--- a/app/javascript/react/styles.css
+++ b/app/javascript/react/styles.css
@@ -7,10 +7,8 @@
   width: 20px;
 }
 
-.down {
-  margin-top: 50px;
-  flex-direction: column;
-  justify-content: space-evenly;
+.voteButtons:hover {
+  color: red;
 }
 
 .post-card {
@@ -58,19 +56,6 @@
 .left-right {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.chat-style {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.avatar-style {
-  display: flex;
   align-items: center;
   gap: 0.5rem;
 }
