--- a/app/javascript/react/styles.css
+++ b/app/javascript/react/styles.css
@@ -19,6 +19,10 @@
   border-radius: 4px;
   height: auto;
   width: 100%;
+  cursor: pointer;
+}
+.post-card:hover {
+  border-color: gray;
 }
 
 .card-header {
