--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,10 +1,64 @@
+<!--
 <p style="color: green"><%= notice %></p>
+-->
+<%= stylesheet_link_tag('styles') %>
 
-<%= render @blog %>
+<nav class="navbar navbar-expand-lg bg-light">
+  <div class="navbar-main">
+    <%= link_to root_path, class:"blogslogo-style" do %>
+      <%= image_tag "MG_BLOGS_LOGO.svg", :class => ""  %>
+    <% end %>
+    
+    <div class="form-group has-search">
+      <form>
+        <span class="fa fa-search form-control-feedback"></span>
+        <input type="text" class="form-control blogs-search" placeholder="Search Post">
+        <button type="submit" hidden></button>
+      </form>
+    </div>
+    
+    <div class="d-flex">
+      <div>
+      <% if user_signed_in? %>
+        <%= button_to "+", new_blog_path, :method => :get, class: "navbar-button" %>
+        </div>
 
+        <div class="vl"></div>
+      <% end %>
+
+      <div class="d-flex">
+      <% if user_signed_in? %>
+        <div class="dropdown">
+          <%= image_tag "sasuke.jpg", :class => "user-icon" %>
+          <a class="btn dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <%= current_user.username %>
+          </a>
+    
+          <ul class="dropdown-menu">
+            <li><%= link_to "My Profile", users_path(@users), class:"dropdown-item" %></li>
+            <li><%= link_to "Sign out", signout_path, class:"dropdown-item" %></li>
+
+            <% else %>
+            <%= link_to "Login", user_session_path(@users), class: "login-link" %>
+            <%= button_to "Sign up", new_user_registration_path(@users), :method => :get, class: "blogs-loginbutton" %>
+            <% end %>
+          </ul>
+        </div> 
+      </div>
+    </div>
+  </div>
+</nav>
+
+<div class="col-8">
+  <show-post></show-post>
+</div>
+
+
+<!--
 <div>
   <%= link_to "Edit this blog", edit_blog_path(@blog) %> |
   <%= link_to "Back to blogs", blogs_path %>
 
   <%= button_to "Destroy this blog", @blog, method: :delete %>
 </div>
+-->
