--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -18,9 +18,9 @@
       <div>
       <% if user_signed_in? %>
         <%= button_to "+", new_blog_path, :method => :get, class: "navbar-button" %>
-        </div>
+      </div>
 
-        <div class="vl"></div>
+        <div class="vertical-line"></div>
       <% end %>
 
       <div class="d-flex">
