--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -18,7 +18,7 @@
         <%= button_to "+", new_blog_path(@blogs), :method => :get, class: "navbar-button" %>
         </div>
 
-        <div class="vl"></div>
+        <div class="vertical-line"></div>
       <% end %>
 
       <div class="d-flex">
