--- a/app/javascript/react/styles.css
+++ b/app/javascript/react/styles.css
@@ -1,16 +1,3 @@
-.vote {
-  background-color: #ecf1f3;
-}
-
-.voteButtons {
-  height: 20px;
-  width: 20px;
-}
-
-.voteButtons:hover {
-  color: red;
-}
-
 .post-card {
   display: flex;
   background-color: white;
@@ -25,11 +12,17 @@
   border-color: gray;
 }
 
-.card-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
+.vote {
+  background-color: #ecf1f3;
+}
+
+.voteButtons {
+  height: 20px;
+  width: 20px;
+}
+
+.voteButtons:hover {
+  color: red;
 }
 
 .left {
@@ -46,8 +39,11 @@
   flex: 12;
 }
 
-.spacing {
-  margin: 0;
+.left-up {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 .left-down {
@@ -57,11 +53,21 @@
   gap: 1rem;
 }
 
-.left-right {
+.card-header {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.avatar-style {
+  display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+
+.spacing {
+  margin: 0;
 }
 
 .card-image {
